backend: 切换 AI 提供商从 DashScope 到 MiniMax（OpenAI 兼容接口）
- pom.xml: 移除 spring-ai-alibaba-bom / dashscope-sdk-java / spring-ai-alibaba-starter-dashscope，新增 spring-ai-openai-spring-boot-starter
- application-dev/prod.yml: dashscope 配置替换为 spring.ai.openai（base-url 指向 MiniMax）
- ToolCallAgent: DashScopeChatOptions → OpenAiChatOptions
- 所有 dashscopeChatModel / dashscopeEmbeddingModel 参数名改为通用名 chatModel / embeddingModel

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>